layout issues updated

--- a/assets/css/tutor-front.css
+++ b/assets/css/tutor-front.css
@@ -3,7 +3,8 @@
 Icon Css
  */
 div[class*="tutor-course-col"] {
-
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .tutor-course-loop{
     background: #fff;
@@ -12,54 +13,65 @@ div[class*="tutor-course-col"] {
     font-size: small;
     overflow: hidden;
     position: relative;
-    box-shadow: 0 0 1px 1px rgba(20,23,28,.1),0 3px 1px 0 rgba(20,23,28,.1);
     vertical-align: top;
-    margin-right: 10px;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
+    border: 1px solid #f7f7f7;
+    margin-bottom: 30px;
 }
 .tutor-course-loop p{
     margin: 0;
 }
+.tutor-course-loop .tutor-course-header a,
+.tutor-course-loop .tutor-course-header a img{
+    display: block;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.tutor-loop-course-container{
+    padding: 20px 15px;
+}
+
+.tutor-loop-rating-wrap{
+    color: #F8C51C;
+    margin-bottom: 6px;
+}
+
+.tutor-course-loop-title a h2{
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 600;
+}
+
+.tutor-loop-course-footer{
+    padding: 10px 15px;
+    border-top: 1px solid #B1B8C9;
+}
+
+/* layout*/
 .tutor-course-col-4{
     width: 25%;
 }
-.tutor-course-col-4:nth-child(4) .tutor-course-loop{
-    margin-right: 0;
-}
+
 .tutor-course-col-3{
     width: 33.33%;
 }
-.tutor-course-col-3:nth-child(3) .tutor-course-loop{
-    margin-right: 0;
-}
+
 .tutor-course-col-2{
     width: 50%;
 }
-.tutor-course-col-2:nth-child(2) .tutor-course-loop{
-    margin-right: 0;
-}
+
 .tutor-course-col-1{
     width: 100%;
 }
 .tutor-course-col-1 .tutor-course-loop{
     width: 100%;
-    margin-right: 0;
 }
 .tutor-course-col-5{
     width: 20%;
 }
-.tutor-course-col-5:nth-child(5) .tutor-course-loop{
-    margin-right: 0;
-}
+
 .tutor-course-col-6{
     width: 16.66%;
-}
-.tutor-course-col-6:nth-child(6) .tutor-course-loop{
-    margin-right: 0;
-}
-.tutor-course-loop-title, .tutor-loop-rating-wrap, .tutor-course-loop-price, .tutor-loo-cart-btn-wrap {
-    padding: 0 10px;
 }
 
 .tutor-course-loop-title h2{
@@ -82,6 +94,8 @@ div[class*="tutor-course-col"] {
     clear: both;
     display: flex;
     flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 .clearfix:before, .clearfix:after{
     display: block;
@@ -89,7 +103,6 @@ div[class*="tutor-course-col"] {
     content: "";
 }
 .tutor-loop-author, .tutor-meta{
-    padding: 0 10px;
     color: #BBBBBB;
 }
 .tutor-text-mute{
